# atlas_prime

./: .gitignore  .rustfmt.toml  Cargo.toml  atlas_prime  readme  todo  welcome.png~
src/: _app.rs  _db_mongo.rs  _db_surreal_edition.rs  _message.rs  _server.rs  app.rs  config.rs  constans.rs  constants.rs  db.rs  main.rs  message.md  message.rs  prelude.rs  server.rs
src/tui/: mod.rs
src/ui/: _toso_settings.rs  app_button.rs  component.rs  db_view.rs  info.rs  infoREADME.md  mod.rs  task_control.rs  welcome.rs
src/ui/sessions/: _sub_session.rs  mod.rs  sub.rs
src/utils/: mod.rs
