[package]
name = "atlas_prime"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = {version="0.29.0",features=["event-stream"]}
ratatui = { version = "0.30.0", features = ["all-widgets"] }
rand = "0.9.2"
sysinfo = "0.37.2"
local-ip-address = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
directories = "6.0.0"
core_affinity = "0.8.3"
ureq = "3.1.4"
tokio = { version = "1.49.0", features = ["full"] }
backtrace = "0.3.76"
chrono = "0.4.42"
futures = "0.3.31"
notify = "8.2.0"
#reqwest = { version = "0.13.1", default-features = false, features = ["json", "webpki-roots"] } # for termux build
#webpki-roots = "1.0.5"
#surrealdb = { version = "2.4.0", features = ["kv-rocksdb"] } # 如果数据量达到 TB 级别，或者需要多机共享，只需将驱动改为 surrealdb = { version = "*", features = ["protocol-http"] } 即可连接到独立的 SurrealDB 服务器，代码逻辑几乎无需改动。